--- a/tk.html
+++ b/tk.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/styl.css">
 </head>
 <body>
-    <h1>Witajcie na stronie!</h1>
-    <hr>
-    <ol>
-        <li>
-            <a href="tk.html" class="tomek">Tomek</a>
-        </li>
-    </ol>
+    <h2>Tomek</h2>
 </body>
 </html>
