--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="tk.html" class="tomek">Tomek</a>
         </li>
+        <li>
+            <a href="wb.html" class="wb">Wiktor</a>
+        </li>
     </ol>
 </body>
 </html>
