--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="tk.html" class="tomek">Tomek</a>
         </li>
+        <l1>
+            <a href="ms.html" class="michal">Michał</a>
+        </l1>
     </ol>
 </body>
 </html>
