Dodano ucznia Patryk przez ucznia Patryk

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ol>
         <li>
             <a href="tk.html" class="tomek">Tomek</a>
+            <a href="pr.html" class="patryk">Patryk</a>
         </li>
     </ol>
 </body>
