--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <h1>Witajcie na stronie!</h1>
     <hr>
 
+    <ol>
+        <li>
+            <a href="#">Link Tomka</a>
+        </li>
+    </ol>
 </body>
 </html>
