--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="#">Link Tomka</a>
         </li>
+        <li>
+            <a href="#">Link Przemka</a>
+        </li>
     </ol>
 </body>
 </html>
