utowrzono Link Patryka

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <h1>Witajcie na stronie!</h1>
     <hr>
+
     <ol>
         <li>
-            <a href="tk.html" class="tomek">Tomek</a>
+            <a href="#">Link Tomka</a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link Patryka</a>
         </li>
     </ol>
 </body>
