--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="#">Link Tomka</a>
         </li>
+        <li>
+            <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx_DVDju34ygSyxCFLiCiat_DQoyUusJHXdw&s">Link Kuby</a>
+        </li>
     </ol>
 </body>
 </html>
